added native code to change icon and splash theme

--- a/web/index.html
+++ b/web/index.html
@@ -8,14 +8,15 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="duas_pwa">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Dua">
+  <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/png" href="favicon.png"/>
+  <link rel="shortcut icon" id="favicon" type="image/png"/>
 
-  <title>Duas</title>
-  <link rel="manifest" href="manifest.json">
+  <title>Dua</title>
+  <link rel="manifest" id="manifest">
+  <script src="app.js" defer></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
