fixed apple dark icon issue for pwa

--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="Dua">
-  <link rel="apple-touch-icon" href="images/icons/icon-192x192.png">
+  <link id="apple_icon" rel="apple-touch-icon">
 
   <!-- Favicon -->
   <link rel="shortcut icon" id="favicon" type="image/png"/>
