--- a/web/index.html
+++ b/web/index.html
@@ -30,8 +30,20 @@
       });
     }
   </script>
-  <!-- <script src="./firebase-messaging-sw.js"></script> -->
-  <script src="fire_app.js"></script>
+  
+  <!-- Firebase -->
+  <script src="/__/firebase/7.17.1/firebase-app.js"></script>
+  <script src="/__/firebase/7.17.1/firebase-analytics.js"></script>
+  <script src="/__/firebase/7.17.1/firebase-messaging.js"></script>
+  <script src="/__/firebase/init.js"></script>
+  
+  <script> 
+    // for analytics
+    firebase.analytics();
+    // for notification
+    const messaging = firebase.messaging()
+  </script>
+
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
 </html>
